# qa-agent-v2

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  playwright-cli.json  pyproject.toml
evals/: application-card-common-actions-canary-quality-review-2026-06-17.md  application-card-common-actions-flow-canary-v2-quality-review-2026-06-19.md  canary-quality-comparison-2026-06-24.md  canary-quality-scorecard-2026-06-24.md  canonical-handoff-evals.md  chunked-writing-no-compact-draft-regression.md  common-application-fields-automation-ready-setup-plan-2026-06-17.md  common-application-fields-canary-quality-review-2026-06-17.md  controlled-batch-preflight-2026-06-25.md  decision-log-regression.md  document-print-form-tags-fresh-canary-v2-quality-review-2026-06-24.md  ft2-of11-clean-run-regression.md  history-editing-fresh-canary-quality-review-2026-06-18.md  history-editing-fresh-canary-v2-quality-review-2026-06-19.md  limited-pilot-manual-sampling-2026-06-24.md  limited-pilot-readiness-2026-06-24.md  mockup-visual-inventory-regression.md  numeric-feedback-gate-regression.md  package-by-package-all-scopes-regression.md  package-test-design-plan-regression.md  requirement-code-traceability-regression.md  reviewer-process-golden-evals.md  reviewer-scope-false-coverage-regression.md  reviewer-test-design-rubric-cases.md  scope-analyzer-handoff-regression.md  scope-internal-work-packages-regression.md  session-log-regression.md  source-row-inventory-and-oracle-regression.md  source-selection-handoff-regression.md  (+8 more)
(+3496 files in other folders)
